--- a/templates/login.html
+++ b/templates/login.html
@@ -29,9 +29,12 @@
 
 <!-- Submit button for log in -->
             <div class="row">
-                <button type="submit" class="col s12 btn-large orange darken-3">
-                    Log In <i class="material-icons prefix white-text">forward</i>
-                </button>
+                <div class="center-align col s6 offset-s3">
+                <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                        Log In<i class="material-icons right">forward</i>
+                    </button>
+                                       
+                </div>
             </div>
         </div>
     </form>
