--- a/templates/registration.html
+++ b/templates/registration.html
@@ -67,10 +67,13 @@
             </div>
 
 <!-- Submit button for registration -->
-            <div class="row">
-                <button type="submit" class="col s12 btn-large orange darken-3">
-                    Register <i class="material-icons prefix white-text">forward</i>
-                </button>
+                <div class="row">
+                <div class="center-align col s6 offset-s3">
+                <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                        Register<i class="material-icons right">forward</i>
+                    </button>
+                                       
+                </div>
             </div>
         </div>
     </form>
