--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3>You can browse all our technologies or select just one category</h3>
+<h3 class="center-align">You can browse all our technologies or select just one</h3>
 
 <!-- Code from Materialize.com for radiobuttons to select category to browse -->
 <form action="#">
@@ -39,10 +39,16 @@
           <li>Added by: {{ technology.posted_by }}</li>
           <li>Posted: {{ technology.post_date }}</li>
         </ul>
+
       </div>
       <div class="card-action">
         <a href="#">See all {{ technology.category_name}} comments</a>
+        <a class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
+            class="material-icons right">edit</i>Edit</a>
+        <a class="waves-effect waves-light btn-small orange darken-3 align-right"><i
+            class="material-icons right">delete</i>Delete</a>
       </div>
+
     </div>
   </div>
 </div>
