Style edit and deleted buttons

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -43,10 +43,12 @@
       </div>
       <div class="card-action">
         <a href="#">See all {{ technology.category_name}} comments</a>
+        <br>
         <a class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
-            class="material-icons right">edit</i>Edit</a>
+            class="material-icons right">edit</i>Edit this technology</a>
         <a class="waves-effect waves-light btn-small orange darken-3 align-right"><i
-            class="material-icons right">delete</i>Delete</a>
+            class="material-icons right">delete</i>Delete this technology</a>
+           
       </div>
 
     </div>
