Link edit button to edit_technology.html page

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -44,7 +44,7 @@
       <div class="card-action">
         <a href="#">See all {{ technology.category_name}} comments</a>
         <br>
-        <a class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
+        <a href="{{ url_for('edit_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
             class="material-icons right">edit</i>Edit this technology</a>
         <a class="waves-effect waves-light btn-small orange darken-3 align-right"><i
             class="material-icons right">delete</i>Delete this technology</a>
