Add cancel button to edit_technology page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,9 +24,11 @@ body {
  
 }
 
-/*-- To space buttons in technologies.html cards --*/
+/*-- To space buttons in edit_tcehnologies.html  --*/
 
-
+.btn-large {
+    margin-bottom: 20px;
+}
 
 
 
