--- a/templates/edit_technology.html
+++ b/templates/edit_technology.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="center-align">{{ page_title }}</h1>
 <h1 class="center-align">Edit the entry for "{{ technology.technology_name}}"</h1>
 
 
@@ -82,6 +81,10 @@
                 <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Edit this technology now! <i class="material-icons right">edit</i>
                     </button>
+<!-- Button to cancel all changes and return to technologies -->
+                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light orange darken-3">
+                        Cancel Changes <i class="material-icons right">close</i>
+                    </a>
                                        
                 </div>
             </div>
