--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -47,7 +47,7 @@
         {% if session.user|lower == technology.posted_by|lower %}
           <a href="{{ url_for('edit_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
             class="material-icons right">edit</i>Edit this technology</a>
-          <a class="waves-effect waves-light btn-small orange darken-3 align-right"><i
+          <a href="{{ url_for('delete_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small orange darken-3 align-right"><i
             class="material-icons right">delete</i>Delete this technology</a>
         {% endif %}   
       </div>
