--- a/templates/edit_technology.html
+++ b/templates/edit_technology.html
@@ -3,7 +3,6 @@
 
 <h1 class="center-align">Edit the entry for "{{ technology.technology_name}}"</h1>
 
-
 <!-- Code for form from Materialize.com -->
 <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('edit_technology', technology_id=technology._id) }}">
@@ -13,79 +12,83 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">important_devices</i>
-                    <input id="technology_name" name="technology_name" value="{{ technology.technology_name }}" minlength="5" maxlength="100" type="text" class="validate" placeholder="Name" required>
+                    <input id="technology_name" name="technology_name" value="{{ technology.technology_name }}"
+                        minlength="5" maxlength="100" type="text" class="validate" placeholder="Name" required>
                     <label for="technology_name">Technology's name</label>
                 </div>
             </div>
 
-<!-- Dropdown for picking a technology's category -->
+            <!-- Dropdown for picking a technology's category -->
             <div class="row">
-				<div class="input-field col s12">
+                <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">list</i>
-					<select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled >Choose a category for your technology</option>
+                    <select id="category_name" name="category_name" class="validate" required>
+                        <option value="" disabled>Choose a category for your technology</option>
                         {% for category in categories %}
-                            {% if category.category_name == technology.category_name %}
-                                <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
-                            {% else %}
-                                <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                            {% endif %}
+                        {% if category.category_name == technology.category_name %}
+                        <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                        {% else %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endif %}
                         {% endfor %}
                     </select>
-					<label for="category_name">Choose a category for your technology</label>
-				</div>
-			</div>
+                    <label for="category_name">Choose a category for your technology</label>
+                </div>
+            </div>
 
-<!-- Input for adding a technology image -->
+            <!-- Input for adding a technology image -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">camera_alt</i>
-                    <input id="technology_image" name="technology_image" value="{{ technology.technology_image }}" type="text" class="validate" placeholder="Important! Must be a url" required>
+                    <input id="technology_image" name="technology_image" value="{{ technology.technology_image }}"
+                        type="text" class="validate" placeholder="Important! Must be a url" required>
                     <label for="technology_image">Technology's Image</label>
                 </div>
             </div>
 
-<!-- Input for adding a technology description -->
+            <!-- Input for adding a technology description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">description</i>
-                    <textarea id="technology_description" name="technology_description" minlength="5"
-                        maxlength="300" placeholder="Brief desciption, less than 300 characters!" class="materialize-textarea validate" required>{{ technology.technology_description }}</textarea>
+                    <textarea id="technology_description" name="technology_description" minlength="5" maxlength="300"
+                        placeholder="Brief desciption, less than 300 characters!" class="materialize-textarea validate"
+                        required>{{ technology.technology_description }}</textarea>
                     <label for="technology_description">Description</label>
                 </div>
             </div>
 
-<!-- Input for adding a best bits about the technology -->
- <div class="row">
-    <div class="input-field col s12">
-        <i class="material-icons prefix orange-text text-darken-3">thumb_up</i>
-        <textarea id="best_bits" name="best_bits" minlength="5"
-            maxlength="200"  class="materialize-textarea validate" required>{{ technology.best_bits }}</textarea>
-        <label for="best_bits">Best bits</label>
-    </div>
-</div> 
+            <!-- Input for adding a best bits about the technology -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">thumb_up</i>
+                    <textarea id="best_bits" name="best_bits" minlength="5" maxlength="200"
+                        class="materialize-textarea validate" required>{{ technology.best_bits }}</textarea>
+                    <label for="best_bits">Best bits</label>
+                </div>
+            </div>
 
-<!-- Input for adding worst bits about the technology -->
-<div class="row">
-    <div class="input-field col s12">
-        <i class="material-icons prefix orange-text text-darken-3">thumb_down</i>
-        <textarea id="worst_bits" name="worst_bits" minlength="5"
-            maxlength="200"  class="materialize-textarea validate" required>{{ technology.worst_bits }}</textarea>
-        <label for="worst_bits">Worst bits</label>
-    </div>
-</div> 
+            <!-- Input for adding worst bits about the technology -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">thumb_down</i>
+                    <textarea id="worst_bits" name="worst_bits" minlength="5" maxlength="200"
+                        class="materialize-textarea validate" required>{{ technology.worst_bits }}</textarea>
+                    <label for="worst_bits">Worst bits</label>
+                </div>
+            </div>
 
-<!-- Submit button for adding a technology -->
+            <!-- Submit button for adding a technology -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
+                    <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Edit this technology now! <i class="material-icons right">edit</i>
                     </button>
-<!-- Button to cancel all changes and return to technologies -->
-                    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light orange darken-3">
+                    <!-- Button to cancel all changes and return to technologies -->
+                    <a href="{{ url_for('get_technologies') }}"
+                        class="btn-large waves-effect waves-light orange darken-3">
                         Cancel Changes <i class="material-icons right">close</i>
                     </a>
-                                       
+
                 </div>
             </div>
         </div>
