--- a/templates/base.html
+++ b/templates/base.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+        type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
     <title>Technostalgia</title>
 </head>
+
 <body>
 
     <header>
 
-<!-- Main navbar using Materialize.com  -->
-		<nav class="nav-extended orange darken-3">
-			<div class="nav-wrapper">
-				<a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons prefix orange-text text-darken-3">dehaze</i></i></a>
-				<ul class="right hide-on-med-and-down">
-					<li><a href="{{ url_for('home') }}">Home</a></li>
-					<li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
+        <!-- Main navbar using Materialize.com  -->
+        <nav class="nav-extended orange darken-3">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
+                        class="material-icons prefix">dehaze</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-					    <li><a href="#">Manage Categories</a></li>
-					    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+                    <li><a href="#">Manage Categories</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
-					    <li><a href="{{ url_for('login') }}">Log In</a></li>
-					    <li><a href="{{ url_for('registration') }}">Register</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('registration') }}">Register</a></li>
                     {% endif%}
-				</ul>
-			</div>
-		</nav>
+                </ul>
+            </div>
+        </nav>
 
-<!--Collapsed navbar to left side using Materialize.com -->
-		<ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align">Technostalgia</h4></li>
+        <!--Collapsed navbar code from Materialize.com -->
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <h4 class="center-align">Technostalgia</h4>
+            </li>
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
             {% if session.user %}
-					    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-					    <li><a href="#">Manage Categories</a></li>
-					    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                    {% else %}
-					    <li><a href="{{ url_for('login') }}">Log In</a></li>
-					    <li><a href="{{ url_for('registration') }}">Register</a></li>
-                    {% endif%}
-		</ul>
-       
-	</header>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+            <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+            <li><a href="#">Manage Categories</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('registration') }}">Register</a></li>
+            {% endif%}
+        </ul>
+
+    </header>
 
     <section>
 
-<!-- Place to display flash messages -->
+        <!-- Place to display flash messages -->
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="row flashes">
-                        <h4 class="orange lighten-1 center-align">{{ message }}</h4>
-                    </div>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row flashes">
+            <h4 class="orange lighten-1 center-align">{{ message }}</h4>
+        </div>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
     </section>
 
@@ -79,4 +85,5 @@
     {% block scripts %}
     {% endblock %}
 </body>
+
 </html>
