--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3 class="center-align">You can browse all our technologies or select just one</h3>
+<h3 class="center-align">You can browse all our categories or select just one</h3>
 
 <!-- Code from Materialize.com for radiobuttons to select category to browse -->
 <form action="#">
@@ -37,7 +37,7 @@
           <li>Best bits: {{ technology.best_bits }}</li>
           <li>Worst bits: {{ technology.worst_bits }}</li>
           <li>Added by: {{ technology.posted_by }}</li>
-          <li>Posted: {{ technology.post_date }}</li>
+          <li>Date posted: {{ technology.post_date }}</li>
         </ul>
 
       </div>
@@ -45,11 +45,14 @@
         <a href="#">See all {{ technology.category_name}} comments</a>
         <br>
         {% if session.user|lower == technology.posted_by|lower %}
-          <a href="{{ url_for('edit_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
+        <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
+          class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
             class="material-icons right">edit</i>Edit this technology</a>
-          <a href="{{ url_for('delete_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small orange darken-3 align-right"><i
+        <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
+          class="waves-effect waves-light btn-small orange darken-3 align-right"><i
             class="material-icons right">delete</i>Delete this technology</a>
-        {% endif %}   
+
+        {% endif %}
       </div>
 
     </div>
