--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-                    <li><a href="#">Manage Categories</a></li>
+                    <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -48,9 +48,9 @@
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
             {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-            <li><a href="#">Manage Categories</a></li>
-            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+                <li><a href="{{ url_for('manage_categories') }}">Manage Categories</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('registration') }}">Register</a></li>
