Add page and functionality to add new categories

--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -15,6 +15,14 @@
     
   </ul>
 
+  <div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light orange darken-3">
+            Add a new category to Technostalgia<i class="fas fa-plus-square right"></i>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
 
 
