--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -4,8 +4,8 @@
 <h1 class="center-align">{{ page_title }}</h1>
 
 <!-- Code for form from Materialize.com -->
-<div class="row">
-    <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
+<div class="row">, category
+    <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
         <div class="card-panel">
 
 <!-- Input for adding a cateory name  -->
@@ -13,7 +13,7 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">important_devices</i>
                     <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text"
-                        class="validate" placeholder="Name" required>
+                        class="validate" value ="{{ category.category_name }}" placeholder="Name" required>
                     <label for="category_name">New Category's name</label>
                 </div>
             </div>
@@ -23,10 +23,11 @@
             <div class="row">
                 <div class="center-align col s6 offset-s3">
                     <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
-                        Add this new category now! <i class="material-icons right">add_circle_outline</i>
+                        Edit this category now! <i class="material-icons right">create</i>
                     </button>
+<!-- Link as button to cancel and return to manage_categories -->
                     <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light orange darken-3">
-                        Cancel <i class="material-icons right">close</i>
+                        Cancel<i class="material-icons right">close</i>
                     </a>
 
                 </div>
