--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -8,7 +8,7 @@
                        
     <li>
       <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
-      <div class="collapsible-body"><span><a href="#" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category</a>
+      <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category</a>
         <a href="#" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Delete this category</a></span></div>
     </li>
     {% endfor %}
@@ -18,8 +18,9 @@
   <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light orange darken-3">
-            Add a new category to Technostalgia<i class="fas fa-plus-square right"></i>
+            Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
         </a>
+        
     </div>
 </div>
 
