--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -9,7 +9,7 @@
     <li>
       <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
       <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category</a>
-        <a href="#" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Delete this category</a></span></div>
+        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Delete this category</a></span></div>
     </li>
     {% endfor %}
     
