--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -35,7 +35,7 @@
           <li>Name: {{ technology.technology_name }}</li>
           <li>Description: {{ technology.technology_description }}</li>
           <li>Best bits: {{ technology.best_bits }}</li>
-          <li>Worst bits: {{ technology.worst_bits }}</li>
+          <li>Worst bits: {{ technology.worst_bits }}</li>!
           <li>Added by: {{ technology.posted_by }}</li>
           <li>Date posted: {{ technology.post_date }}</li>
         </ul>
@@ -48,16 +48,31 @@
         <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
           class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
             class="material-icons right">edit</i>Edit this technology</a>
-        <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-          class="waves-effect waves-light btn-small orange darken-3 align-right"><i
-            class="material-icons right">delete</i>Delete this technology</a>
-
-        {% endif %}
+        <a class="waves-effect waves-light  btn-small orange darken-3 align-right modal-trigger"
+          href="#modal{{ technology._id }}"><i
+          class="material-icons right">close</i>SUPERSAFE DELETE THIS TECHNOLOGY</a>
+                {% endif %}
       </div>
 
     </div>
   </div>
 </div>
+<!--  modal -->
+<div id="modal{{ technology._id }}" class="modal">
+  <div class="modal-content">
+    <h4>Are you sure you want to delete this item?</h4>
+    <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
+  </div>
+  <div class="modal-footer">
+    <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
+      class="modal-close waves-effect waves-light btn-flat">Yes I am certain I want to delete this</a>
+
+    <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
+      class="modal-close waves-effect waves-light btn-flat">No, return to safety</a>
+
+  </div>
+</div>
 {% endfor %}
+
 
 {% endblock  %}
