Style modal buttons

--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -25,6 +25,7 @@
                     <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Add this new category now! <i class="material-icons right">add_circle_outline</i>
                     </button>
+ <!-- Button to cancel all changes and return to manage_categories -->
                     <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light orange darken-3">
                         Cancel <i class="material-icons right">close</i>
                     </a>
