--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -83,7 +83,7 @@
                     </button>
                     <!-- Button to cancel all changes and return to manage_categories -->
                     <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light orange darken-3">
-                        Cancel <i class="material-icons right">close</i></a>
+                        Cancel <i class="material-icons right">close</i></
                 </div>
             </div>
         </div>
