--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -9,9 +9,9 @@
     <li>
       <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
       <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category name</a>
-        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Delete this category</a>
+        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"></a>
         <!--  Button for modal -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal{{ category._id }}">Modal</a></span>
+        <a class="modal-trigger btn-large waves-effect waves-light orange darken-3" href="#modal{{ category._id }}"><i class="material-icons right">close</i>Delete this category</a></span>
       </div>
     </li>
     <!--  modal -->
@@ -22,10 +22,10 @@
   </div>
   <div class="modal-footer">
     <a href="{{ url_for('delete_category', category_id=category._id) }}"
-      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I want to delete this category</a>
+      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right"><i class="material-icons right">close</i>Yes I am certain I want to delete this category</a>
 
     <a href="{{ url_for('manage_categories') }}"
-      class="modal-close waves-effect waves-light btn-flat">No, return to safety</a>
+      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right"><i class="material-icons right">arrow_back</i>No, return to safety</a>
 
   </div>
 </div>
