Tidy and style buttons site wide

--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -81,9 +81,9 @@
                     <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Add this technology now! <i class="material-icons right">add_circle_outline</i>
                     </button>
-                    <!-- Button to cancel all changes and return to manage_categories -->
+                    <!-- Button to cancel all changes and return to technologies -->
                     <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light orange darken-3">
-                        Cancel <i class="material-icons right">close</i></
+                        Cancel <i class="material-icons right">close</i></a>
                 </div>
             </div>
         </div>
