--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -4,7 +4,7 @@
 <h1 class="center-align">{{ page_title }}</h1>
 
 <!-- Code for form from Materialize.com -->
-<div class="row">, category
+<div class="row">
     <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
         <div class="card-panel">
 
