--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1 class="center-align">{{ page_title }}</h1>
+<h2>Click any category to edit it</h2>
 <ul class="collapsible">
   {% for category in categories %}
                         
@@ -9,7 +10,7 @@
     <li>
       <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
       <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category name</a>
-        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"></a>
+       
         <!--  Button for modal -->
         <a class="modal-trigger btn-large waves-effect waves-light orange darken-3" href="#modal{{ category._id }}"><i class="material-icons right">close</i>Delete this category</a></span>
       </div>
