--- a/templates/login.html
+++ b/templates/login.html
@@ -34,8 +34,8 @@
                         Log In<i class="material-icons right">forward</i>
                     </button>
                     <div class="col s12 ">
-                        <p>If you have not registered yet you can <a href="{{ url_for('registration') }}"
-                                class=" ">Register Here</a></p>
+                        <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}"
+                                class="orange-text text-darken-4">Register Here</a></p>
 
                     </div>
 
@@ -46,13 +46,6 @@
     </form>
 </div>
 
-<div class="row">
-    <div class="col s12">
-        <p class="center-align">
-            Not registered yet?
-            <a href="{{ url_for('registration') }}" class="orange-text text-darken-4">Register Here</a>
-        </p>
-    </div>
-</div>
+
 
 {% endblock %}
