--- a/templates/registration.html
+++ b/templates/registration.html
@@ -72,20 +72,13 @@
                     <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Register<i class="material-icons right">forward</i>
                     </button>
+                    <p>If you have already joined us you can <a href="{{ url_for('login') }}"
+                        class="orange-text text-darken-4">Log in Here</a></p>
 
                 </div>
             </div>
         </div>
     </form>
-</div>
-
-<div class="row">
-    <div class="col s12">
-        <p class="center-align">
-            Already Registered?
-            <a href="{{ url_for('login') }}" class="orange-text text-darken-4">Log In</a>
-        </p>
-    </div>
 </div>
 
 {% endblock %}
