--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -63,12 +63,12 @@
     <h4>Are you sure you want to delete this item?</h4>
     <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer center-align">
     <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
       class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I want to delete this</a>
 
     <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-      class="modal-close waves-effect waves-light btn-flat">No, return to safety</a>
+      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">No, return to safety</a>
 
   </div>
 </div>
