--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -10,26 +10,10 @@
     <li>
       <div class="collapsible-header"><i class="material-icons">list</i>{{ category.category_name }}</div>
       <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Edit this category name</a>
-       
-        <!--  Button for modal -->
-        <a class="modal-trigger btn-large waves-effect waves-light orange darken-3" href="#modal{{ category._id }}"><i class="material-icons right">close</i>Delete this category</a></span>
+        ><a href="{{ url_for('add_technology') }}" class="btn-large waves-effect waves-light orange darken-3"><i class="material-icons right">close</i>Add a technology</a></span>
       </div>
     </li>
-    <!--  modal -->
-<div id="modal{{ category._id }}" class="modal">
-  <div class="modal-content">
-    <h4>Are you sure you want to delete this category?</h4>
-    <p>The entire category and all its technologies will be deleted and you will not be able to retrieve them</p>
-  </div>
-  <div class="modal-footer">
-    <a href="{{ url_for('delete_category', category_id=category._id) }}"
-      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right"><i class="material-icons right">close</i>Yes I am certain I want to delete this category</a>
-
-    <a href="{{ url_for('manage_categories') }}"
-      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right"><i class="material-icons right">arrow_back</i>No, return to safety</a>
-
-  </div>
-</div>
+  
     {% endfor %}
     
   </ul>
