--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,15 +3,16 @@
 
 <h1 class="center-align">{{ page_title }}</h1>
 
-<div class="row">
-    <div class="col s12 m8 offset-m2">
-        <div class="card-panel">
-            <h3 class="center-align">
-                {{ username }}'s Profile
-            </h3>
+
+
+    <div class="row">
+        <div class="col s12 m8 offset-m2">
+            <div class="card-panel">
+                <h3 class="center-align">
+                    {{ username|capitalize }}'s Profile
+                </h3>
+            </div>
         </div>
     </div>
-</div>
-
 
 {% endblock %}
