--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -2,59 +2,57 @@
 
 {% block content %}
 
-<h3 class="center-align">You can browse all our categories or select just one</h3>
-
-<!-- Code from Materialize.com for radiobuttons to select category to browse -->
-<form action="#">
-  <div class="row yellow lighten-4">
-    <div class="input-field col s12">
-      <i class="material-icons prefix orange-text text-darken-3">dehaze</i>
-      <select id="category_name" name="category_name" class="validate" required>
-        <option value="" disabled selected>Choose a category to browse</option>
-        <option value="all">View all</option>
-        {% for category in categories %}
-        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-        {% endfor %}
-      </select>
-      <label for="category_name">Choose a category to browse</label>
-    </div>
+<div class="row">
+  <div class="col s12">
+    <h3 class="center-align">You can filter your search by keyword or category</h3>
   </div>
-
-  <div class="row">
-    
-  </div>
-</form>
-
-<h1>Or</h1>
+</div>
 
 <!-- Code for search box  -->
 <div class="row card-panel yellow lighten-4">
   <form action="{{ url_for('search') }}" method="post" class="col s12">
-      <div class="row valign-wrapper center-align">
-          <div class="input-field col s12 m8">
-              <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-              <input type="text" name="query" id="query" minlength="3" class="validate" required>
-              <label for="query">Search Technologies</label>
-          </div>
-          <div class="col s12 m4">
-              
-              <button type="submit" class="orange darken-3 btn-small"><i class="material-icons right">search</i>
-                  Search
-              </button>
-              <a href="{{ url_for('get_technologies') }}" class="orange darken-3 btn-small"><i class="material-icons right">autorenew</i>Reset</a>
-          </div>
+    <div class="row valign-wrapper center-align">
+      <div class="input-field col s12">
+        <i class="material-icons prefix">search</i>
+        <input type="text" name="query" id="query" minlength="3" class="validate" required>
+        <label for="query">Search by keyword</label>
       </div>
+    </div>
+    
+<div class="row">
+  <div class="col s12 m8">
+
+    <!-- Code from Materialize.com for radiobuttons to select category to browse -->
+    <select id="category_name" name="category_name" class="validate">
+      <option value="" disabled selected>Choose a category to browse</option>
+      <option value="all">View all</option>
+      {% for category in categories %}
+      <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+      {% endfor %}
+    </select>
+  </div>
+</div>
+
+
+    <div class="row">
+
+      <!-- Search and reset buttons  -->
+      <div class="col s12 center-align">
+
+        <button type="submit" class="orange darken-3 btn-small"><i class="material-icons right">search</i>
+          Search
+        </button>
+        <a href="{{ url_for('get_technologies') }}" class="orange darken-3 btn-small"><i class="material-icons right">autorenew</i>Reset</a>
+      </div>
+    </div>
   </form>
 </div>
 
-{% if technologies|length == 0 %}
-    <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
-{% endif %}
 
 <!-- Code from Materialize.com for cards -->
 {% for technology in technologies %}
 <div class="col s12 m7">
-  <div class="card horizontal small hoverable">
+  <div class="card horizontal medium hoverable">
     <div class="card-image">
       <img src="{{ technology.technology_image }}" alt="">
     </div>
@@ -79,9 +77,8 @@
           class="waves-effect waves-light btn-small orange darken-3 aligh-right"><i
             class="material-icons right">edit</i>Edit this technology</a>
         <a class="waves-effect waves-light  btn-small orange darken-3 align-right modal-trigger"
-          href="#modal{{ technology._id }}"><i
-          class="material-icons right">close</i>Delete this technology</a>
-                {% endif %}
+          href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this technology</a>
+        {% endif %}
       </div>
 
     </div>
@@ -95,7 +92,8 @@
   </div>
   <div class="modal-footer center-align">
     <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I want to delete this</a>
+      class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">Yes I am certain I want to
+      delete this</a>
 
     <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
       class="modal-close waves-effect waves-light btn-small orange darken-3 aligh-right">No, return to safety</a>
